[gd_scene load_steps=10 format=3 uid="uid://b5dbsmuip5jpb"]

[ext_resource type="Script" path="res://mechanics/door_placing/door.gd" id="1_e15k1"]
[ext_resource type="Script" path="res://mechanics/door_placing/DoorBody.gd" id="2_s703r"]

[sub_resource type="BoxMesh" id="BoxMesh_gviwp"]
size = Vector3(2.5, 5, 0.2)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_iee3v"]
points = PackedVector3Array(1.32937, 2.53869, 0.177778, -1.28968, -2.53869, -0.139683, -1.28968, -2.53869, 0.177778, -1.28968, 2.53869, -0.139683, 1.32937, -2.53869, -0.139683, 1.32937, -2.53869, 0.177778, -1.28968, 2.53869, 0.177778, 1.32937, 2.53869, -0.139683)

[sub_resource type="BoxMesh" id="BoxMesh_57u2x"]

[sub_resource type="BoxShape3D" id="BoxShape3D_g6aoj"]
size = Vector3(3.6709, 6.42535, 1)

[sub_resource type="Animation" id="Animation_s3su6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door/DoorBoard:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 2.55045, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Door/DoorBoard:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Door/CollisionShape3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 2.55045, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Door/CollisionShape3D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_bjhrt"]
resource_name = "door_open"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Door/DoorBoard:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 2.55045, 0), Vector3(0, 2.55045, -0.565572), Vector3(-0.224641, 2.55045, -0.993661), Vector3(-0.934248, 2.55045, -1.16608)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Door/DoorBoard:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.393031, 0), Vector3(0, 0.930068, 0), Vector3(0, 1.5708, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Door/CollisionShape3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 2.55045, 0), Vector3(0, 2.55045, -0.565572), Vector3(-0.224641, 2.55045, -0.993661), Vector3(-0.934248, 2.55045, -1.16608)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Door/CollisionShape3D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.393031, 0), Vector3(0, 0.930069, 0), Vector3(0, 1.5708, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8nvap"]
_data = {
"RESET": SubResource("Animation_s3su6"),
"door_open": SubResource("Animation_bjhrt")
}

[node name="Door" type="Node3D"]
script = ExtResource("1_e15k1")

[node name="Door" type="StaticBody3D" parent="." groups=["open"]]
script = ExtResource("2_s703r")

[node name="DoorBoard" type="MeshInstance3D" parent="Door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.55045, 0)
mesh = SubResource("BoxMesh_gviwp")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.55045, 0)
shape = SubResource("ConvexPolygonShape3D_iee3v")

[node name="DoorBoardMarker" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.55045, 0)
visible = false
mesh = SubResource("BoxMesh_gviwp")

[node name="DoorFrame" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.5727, 0)
visible = false
mesh = SubResource("BoxMesh_57u2x")

[node name="DoorFrameMarker" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.5727, 0)
visible = false
mesh = SubResource("BoxMesh_57u2x")

[node name="Area" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.016133, 2.71268, 0)
shape = SubResource("BoxShape3D_g6aoj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8nvap")
}

[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
